// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Multiple checkbox mounted html should match snapshot 1`] = `
<div>
    <input type="checkbox" id="checkbox-1" aria-checked="true" aria-labelledby="label-checkbox-1">
    <label id="label-checkbox-1" for="checkbox-1">
        Checkbox
    </label>
    <input type="checkbox" id="checkbox-2" disabled="disabled" aria-labelledby="label-checkbox-2">
    <label id="label-checkbox-2" for="checkbox-2">
        Checkbox2
    </label>
</div>
`;

exports[`Multiple checkbox with group label mounted html should match snapshot 1`] = `
<div role="group" aria-labelledby="checkbox-group">
    <label id="checkbox-group" class="">
        Checkbox Group
    </label>
    <input type="checkbox" id="checkbox-1" disabled="disabled" aria-checked="true" aria-labelledby="checkbox-group label-checkbox-1">
    <label id="label-checkbox-1" for="checkbox-1">
        Checkbox
    </label>
    <input type="checkbox" id="checkbox-2" aria-labelledby="checkbox-group label-checkbox-2">
    <label id="label-checkbox-2" for="checkbox-2">
        Checkbox2
    </label>
</div>
`;

exports[`Single checkbox mounted html should match snapshot 1`] = `
<div>
    <input type="checkbox" id="checkbox" aria-labelledby="label-checkbox">
    <label id="label-checkbox" for="checkbox">
        Checkbox
    </label>
</div>
`;

exports[`Single checked checkbox mounted html should match snapshot 1`] = `
<div>
    <input type="checkbox" id="checkbox" aria-checked="true" aria-labelledby="label-checkbox">
    <label id="label-checkbox" for="checkbox">
        Checkbox
    </label>
</div>
`;

exports[`Single disabled checkbox mounted html should match snapshot 1`] = `
<div>
    <input type="checkbox" id="checkbox" disabled="disabled" aria-labelledby="label-checkbox">
    <label id="label-checkbox" for="checkbox">
        Checkbox
    </label>
</div>
`;
